2001-12-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* url.c (openSSLHandle): accept_this_file is out of 
					#ifdef USE_SSL_VERIFY

2001-12-27  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02753]
	* url (ssl_verify_error_string): deleted
	* url.c (openSSLHandle): use X509_verify_cert_error_string()

2001-12-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02750] RFC2818 server identity check
	* istream.c (ssl_certificate_validity): added
	* istream.c (ssl_set_certificate_validity): added
	* istream.c (ssl_get_certificate): use ssl_certificate_validity
	* istream.h (ssl_set_certificate_validity): added
	* url.c (ssl_verity_error_string): added
	* url.c (openSSLHandle): add accept_this_site
	* url.c (openSSLHandle): dont check by SSL_VERIFY_PEER,
		use SSL_get_verify_result() instead
	* url.c (openSSLHandle): check peer_certificate() and then
		SSL_get_verify_result()

2001-12-27  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02749] cleanup code for editor,mailer,extbrowser
	* etc.c (myExtCommand): added
	* etc.c (myEditor): added
	* form.c (input_textarea): use myEditor()
	* main.c (pipeBuf): use myExtCommand()
	* main.c (editBf): use myEditor()
	* main.c (editScr): use myEditor()
	* main.c (followA): use myExtCommand()
	* main.c (cmd_loadURL): use myExtCommand()
	* main.c (invoke_browser): use myExtCommand()
	* main.c (execdict): use myExtCommand()
	* proto.h (myExtCommand): added
	* proto.h (myEditor): added

2001-12-27  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02748] cleanup code for restoring cursor position
	* buffer.c (reshapeBuffer): delete top, linenum, cursorY, pos, 
		currentColumn, formitem
	* buffer.c (reshapeBuffer): add sbuf and 
		use copyBuffer(), restorePosition()
	* buffer.c (reshapeBuffer): use chkURLBuffer(), chkNMIDBuffer()
	* display.c (in_check_url): deleted
	* display.c (displayBuffer): ditto
	* display.c (displayBuffer): s/Currentbuf/buf/
	* display.c (arrangeLine): ditto